--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -1,5 +1,3 @@
-/* WebContent/css/styles.css */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #2c3e50;
@@ -11,11 +9,12 @@ body {
 
 h1 {
     margin-top: 20px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1em;
+    margin-top: 20px;
 }
 
 ul {
@@ -29,8 +28,8 @@ li {
 }
 
 img {
-    max-width: 100px; /* 最大幅を設定 */
-    max-height: 150px; /* 最大高さを設定 */
+    max-width: 80px; /* 最大幅を設定 */
+    max-height: 120px; /* 最大高さを設定 */
 }
 
 .button {
@@ -47,5 +46,30 @@ img {
 }
 
 .button:hover {
+    background-color: #2980b9;
+}
+
+.blackjack-container, .result-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+form button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1em;
+    color: #ecf0f1;
+    background-color: #3498db;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 10px;
+}
+
+form button:hover {
     background-color: #2980b9;
 }
